# vulkan-christmas-tree

./: Cargo.toml  README.md  build.rs
models/: nice.md  tree.mtl
src/: color_mesh.rs  fps_calculator.rs  fs.rs  main.rs  mesh.rs  textured_mesh.rs  vulkan.rs
src/coords/: mod.rs
src/scene/: baubles.rs  camera.rs  ground.rs  lights.rs  mod.rs  snow.rs  tree.rs
src/scene/snow/: mod.rs
src/shaders/: color.frag  color.vert  mandelbrot.glsl  shader.frag  shader.vert  simple.comp  simple.frag  simple.vert  snow.comp  textured.frag  textured.vert
src/vulkan/: compute_execution.rs  compute_setup.rs  core.rs  graphics_execution.rs  graphics_setup.rs  mod.rs
