[package]
name = "vulkan-christmas-tree"
version = "0.1.0"
authors = ["Jacek Bilski <jacek@bilski.tech>"]
edition = "2021"

[features]
default = []
validation-layers = []

[dependencies]
ash = { version = "0.37.3+1.3.251", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
cgmath = "0.18.0"
winit = "0.29.15"
memoffset = "0.9.1"
rand = { version = "0.8.5", features = ["small_rng"] }
tobj = "3.2.5"
image = "0.25.5"

[build-dependencies]
shaderc = "0.8.0"

[dev-dependencies]
rstest = "0.23.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }
